--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ django-filter~=22.1
 djangorestframework==3.12.4
 # djangorestframework-simplejwt==5.2.2
 # gunicorn==20.0.4
+djoser-2.1.0
 psycopg2-binary==2.8.6
 # PyJWT==2.1.0
 python-dotenv
