--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ djangorestframework==3.12.4
 # djangorestframework-simplejwt==5.2.2
 # gunicorn==20.0.4
 djoser-2.1.0
+pillow-9.4.0
 psycopg2-binary==2.8.6
 # PyJWT==2.1.0
 python-dotenv
