--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ Django==3.2
 django-filter~=22.1
 djangorestframework==3.12.4
 # djangorestframework-simplejwt==5.2.2
-# gunicorn==20.0.4
+gunicorn==20.0.4
 djoser-2.1.0
 pillow-9.4.0
 psycopg2-binary==2.8.6
