--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,9 +4,12 @@ django-filter~=22.1
 djangorestframework==3.12.4
 # djangorestframework-simplejwt==5.2.2
 gunicorn==20.0.4
-djoser-2.1.0
-pillow-9.4.0
-psycopg2-binary==2.8.6
+djoser
+# djoser-2.1.0
+pillow
+# pillow-9.4.0
+# psycopg2-binary==2.8.6
+psycopg2-binary~=2.8.6
 # PyJWT==2.1.0
 python-dotenv
 pytz==2020.1
