--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,9 +1,38 @@
 server {
+    server_tokens off;
     listen 80;
+    server_name 127.0.0.1;
+
+    location /media/ {
+        root /var/html/;
+    }
+
+    location /static/admin/ {
+        root /var/html/;
+    }
+
+    location /static/rest_framework/ {
+        root /var/html/;
+    }
+    
+
+    location /admin/ {
+        proxy_pass http://web:8000/admin/;
+    }
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
+    location /api/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
+        proxy_pass http://web:8000;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
