--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,25 @@
+name: Foodgram-app workflow
 
+on: [push]
+
+jobs:
+  tests:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
+
+    - name: Install dependencies
+      run: | 
+        python -m pip install --upgrade pip
+        pip install flake8
+        cd backend/
+        pip install -r requirements.txt 
+    - name: Test with flake8 and django tests
+      run: |
+        python -m flake8
+  
