--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,9 +4,9 @@ WORKDIR /app
 
 COPY requirements.txt .
 
-RUN apt-get update \
-    && apt-get -y install libpq-dev gcc \
-    && pip install psycopg2
+# RUN apt-get update \
+#     && apt-get -y install libpq-dev gcc \
+#     && pip install psycopg2
 RUN pip3 install -r requirements.txt --no-cache-dir
 
 COPY foodgram/ .
