--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -20,9 +20,7 @@ services:
       - ./.env
 
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: mariaby/foodgram_frontend
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
