--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - web
 
   nginx:
-    image: nginx:1.19.3
+    image: nginx:1.21.3-alpine
     ports:
       - "80:80"
     volumes:
