--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,11 @@ jobs:
           context: backend
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend
+        with:
+          context: frontend
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend
+
   
   deploy:
     runs-on: ubuntu-latest
@@ -61,6 +66,8 @@ jobs:
             sudo docker-compose stop
             sudo docker-compose rm web
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend
+            sudo dockercompose rm frontend
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
