--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -33,7 +33,8 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
+      - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
+      - ../docs/openari-schema.yml:/usr/share/nginx/html/api/docs/openari-schema.yml
       - static_value:/var/html/static/
       - media_value:/var/html/media/
     depends_on:
