Исправлена ошибка валидации

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,7 @@ dmypy.json
 backend/media
 backend/foodgram/media
 # backend/foodgram/static
+
+.DS_Store
+backend/.DS_Store
+backend/foodgram/.DS_Store
